@@ -1,3 +1,9 @@
+Thu Sep 18 00:55:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Allow getting a document based on
+	  the xapian docid, instead of the external unique ID used by
+	  xappy.
+
 Tue Sep 09 17:15:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/field_associations.py: Extend the test a bit
